# cpluscraft

./: README.md  cpluscraft.sln
Source/: CMakeLists.txt  Common.cpp  Common.h  Game.cpp  Game.h  Globals.cpp  Globals.h  LogSystem.h  imgui.ini  main.cpp
Source/Audio/: MusicBuffer.cpp  MusicBuffer.h  SoundDevices.cpp  SoundDevices.h
Source/Editor/: Window.cpp  Window.h
Source/GLfunc/: GLfunc.cpp  GLfunc.h
Source/Libraries/imgui/: imgui_demo.cpp
Source/Objects/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Shapes.cpp  Shapes.h  Texture.cpp  Texture.h
Source/Objects/Blocks/: Blocks.cpp  Blocks.h
Source/Physics/: BlockCollision.cpp  BlockCollision.h
Source/Player/: Camera.cpp  Camera.h  PlayerUI.cpp  PlayerUI.h
Source/Resources/Models/obj_BackPack/: backpack.mtl
Source/Resources/Models/obj_Gun/: untitled.mtl
Source/Resources/Shaders/Cubemap/: defaultFragmentCM.glsl
Source/Resources/Shaders/Lighting/: lightingFragment.glsl  lightingVertex.glsl
Source/Resources/Shaders/Objects/NoSpecularTexture/: defaultVertexNS.glsl
Source/World/: Skybox.cpp  Skybox.h  TerrainGenerator.cpp  TerrainGenerator.h
source/: CMakeLists.txt  callback.h  camera.cpp  camera.h  common.cpp  common.h  error.h  game.cpp  game.h  glad.c  imgui.ini  lightSource.h  main  main.cpp  makefile  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
source/audio/: musicBuffer.cpp  musicBuffer.h  soundDevices.cpp  soundDevices.h
source/editor/: window.cpp  window.h
source/models/backpack/: backpack.mtl
source/objects/: lightSource.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  shapes.cpp  shapes.h  texture.cpp  texture.h
source/objects/world/: render.h
source/player/: camera.cpp  camera.h  playerUI.cpp  playerUI.h
source/resources/models/sword/: untitled.mtl
source/resources/shaders/: defaultFragment.glsl  defaultVertex.glsl  lightingFragment.glsl
source/resources/shaders/objects/noSpecularTexture/: defaultFragmentNS.glsl
source/resources/shaders/objects/specularTexture/: defaultVertex.glsl
source/shaders/: defaultFragment.glsl  lightingVertex.glsl
source/world/: skybox.cpp  skybox.h  terrain.cpp  terrain.h
